# django_tennis_club

./: .env.example  .gitignore  README.md  pyproject.toml
tennis_club/: db.sqlite3
tennis_club/globalstaticfiles/: global.css
tennis_club/members/: admin.py  models.py  urls.py  views.py
tennis_club/members/migrations/: 0001_initial.py  0002_member_join_date_member_phone.py  0003_member_slug.py  0004_alter_member_slug.py
tennis_club/members/static/: style.css
tennis_club/members/static/members/: style.css
tennis_club/members/templates/: 404.html  base.html  details.html  index.html  members.html  template.html
tennis_club/members/templates/members/: base.html  base_bootstrap5.html  details.html  index.html  members.html  table.html  tables.html  template.html
tennis_club/tennis_club/: settings.py  urls.py
